--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build:css": "tailwindcss -i ./input.css -o ./public/dist/styles.css --watch"
+    "dev": "tailwindcss -i ./input.css -o ./public/dist/styles.css --watch",
+    "build": "tailwindcss -i ./input.css -o ./public/dist/styles.css",
+    "start": "serve public"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "serve": "^14.2.1"
   }
 }
