--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tailwindcss -i ./input.css -o ./public/dist/styles.css --watch",
     "build": "tailwindcss -i ./input.css -o ./public/dist/styles.css",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm install && npm run build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
