--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "public",
-        "buildCommand": "npm run build"
+        "distDir": "public"
       }
     }
   ],
@@ -15,8 +14,5 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ],
-  "github": {
-    "silent": true
-  }
+  ]
 } 
