Enable preview deployments in Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,11 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "main": true,
+      "preview": true
+    }
+  }
 } 
