--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,12 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "public"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "public",
+  "framework": null,
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ],
-  "git": {
-    "deploymentEnabled": {
-      "main": true,
-      "preview": true
-    }
-  }
+  ]
 } 
